<package format="2">
  <name>rosbag_play_rviz_plugin</name>
  <version>1.0.0</version>
  <description>rosbag_play_rviz_plugin</description>
  <maintainer email="yyamazaki98217@gmail.com">yudai.yamazaki</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>roscpp</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
